# langtrain-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/langtrain/: __init__.py  _remote_text.py  _remote_vision.py  auth.py  cli.py  client.py  repl.py
src/langtrain/intelligence/: __init__.py  engine.py
src/langtrain/text/: __init__.py
src/langtrain/training/: __init__.py  adaptive_rank.py  kv_quant.py
src/langtrain/vision/: __init__.py
