[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langtrain-ai"
version = "1.0.1"
description = "The unified Python SDK for training, aligning, and deploying LLMs — text and vision."
authors = [
    { name = "Pritesh Raj", email = "priteshraj41@gmail.com" }
]
maintainers = [
    { name = "Langtrain AI", email = "contact@langtrain.ai" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
keywords = [
    "llm", "fine-tuning", "LoRA", "QLoRA", "AdaptiveRank", "RLHF", "DPO", "GRPO", "PPO",
    "vision-language-model", "VLM", "dataset-intelligence", "TurboQuant",
    "langtrain", "langtune", "langvision", "transformers", "peft", "mlops"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core deps — minimal, GPU stack is optional
dependencies = [
    "requests>=2.28.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
# Full local training stack
train = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "datasets>=2.14.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
    "trl>=0.8.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "openpyxl>=3.1.0",
]
# Vision model support
vision = [
    "torchvision>=0.15.0",
    "Pillow>=10.0.0",
    "langvision>=0.1.57",
]
# Triton kernels (Linux/CUDA only)
kernels = [
    "triton>=2.1.0",
    "flash-attn>=2.3.0",
]
# Full install
all = [
    "langtrain[train,vision,kernels]",
    "langtune>=0.1.41",
    "langvision>=0.1.57",
]

[project.scripts]
langtrain = "langtrain.cli:main"
lt = "langtrain.cli:main"

[project.urls]
Homepage = "https://langtrain.xyz"
Documentation = "https://langtrain.xyz/docs"
Repository = "https://github.com/langtrain-ai/langtrain-py"
Issues = "https://github.com/langtrain-ai/langtrain-py/issues"
PyPI = "https://pypi.org/project/langtrain-ai"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
langtrain = ["py.typed"]
